@@ -106,8 +106,7 @@ bool Halting::discardDqmEvent(MemRef_t* bufRef) const {
 	SharedResourcesPtr_t res = outermost_context().getSharedResources();
 	bool returnValue = false;
 	try {
-		returnValue = res->resourceStructure_->discardDqmEvent/*WhileHalting*/(
-				bufRef);
+		returnValue = res->resourceStructure_->discardDqmEventWhileHalting(bufRef);
 	} catch (evf::Exception& e) {
 		moveToFailedState(e);
 	}
